# pdf_reader

./: .gitignore  README.md  pyproject.toml
pdf_reader/: __main__.py  extract.py  read.py  summarize.py  utils.py
