[tool.poetry]
name = "pdf-reader"
version = "0.1.0"
description = ""
authors = ["Jonathan Schweder <jonathanschweder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^3.0.1"
pyttsx3 = "^2.90"
langchain = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
